2005-09-14  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (tc_x86_regname_to_dw2regnum): Add selector
	registers, floating point control and status words, and mxcsr as
	well as (for 64-bit code) segment base registers and rflags.

2005-09-09  Dmitry Diky  <diwil@spec.ru>

	* config/tc-msp430.c (msp430_operands): Undo last changes. Instead...
	(msp430_relax_frag): add a guard check to ensure that final fr_subtype
	has been reached.

2005-09-08  Chao-ying Fu  <fu@mips.com>

	* doc/as.texinfo: Document -mdsp and -mno-dsp options.
	* doc/c-mips.texi: Likewise, and document ".set dsp" and ".set nodsp"
	directives.

2005-09-08  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_smi, do_t_smi): Rename ...
	(do_smc, do_t_smc): ... to this.
	(insns): Remane smi to smc.
	(md_apply_fix, tc_gen_reloc): Rename BFD_RELOC_ARM_SMI to
	BFD_RELOC_ARM_SMC.

2005-09-07  Richard Henderson  <rth@redhat.com>

	* dwarf2dbg.c (dwarf2_where): Set line->isa.
	(dwarf2_set_isa): New.
	(dwarf2_directive_loc): Rearrange to allow all options on one line.
	* dwarf2dbg.h (dwarf2_set_isa): Declare.
	* doc/as.texinfo: Update .loc documentation.

2005-09-07  Richard Henderson  <rth@redhat.com>

	* dwarf2dbg.c: Include safe-ctype.h.
	(DWARF2_LINE_OPCODE_BASE): Bump to 13.
	(current): Initialize.
	(dwarf2_emit_insn): Clear DWARF2_FLAG_BASIC_BLOCK,
	DWARF2_FLAG_PROLOGUE_END, DWARF2_FLAG_EPILOGUE_BEGIN.
	(dwarf2_directive_file): Cope with invalid filename.
	(dwarf2_directive_loc): Add handling for basic_block, prologue_end,
	epilogue_begin, is_stmt, isa.
	(emit_inc_line_addr): Move line_delta == 0, addr_delta == 0 special
	case down lower.
	(process_entries): Handle isa, DWARF2_FLAG_PROLOGUE_END, 
	and DWARF2_FLAG_EPILOGUE_BEGIN.
	(out_debug_line): Emit sizes for DW_LNS_set_prologue_end,
	DW_LNS_set_epilogue_begin, DW_LNS_set_isa.
	* dwarf2dbg.h (DWARF2_FLAG_IS_STMT): Rename from DWARF2_FLAG_BEGIN_STMT.
	(DWARF2_FLAG_BASIC_BLOCK): Rename from DWARF2_FLAG_BEGIN_BLOCK.